# RescueBox

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  README_EXE.txt  flaskml_migration_steps.md  pyproject.toml  rescuebox.spec  run_server  steps.md  tasks.py
.github/workflows/: lint.yml  test.yml
RescueBox-Desktop/: package-lock.json  package.json
RescueBox-Desktop/release/app/: package-lock.json  package.json
RescueBox-Desktop/src/main/database/migrations/: 0012_servers_add_col_plugin.ts  umzug.ts
RescueBox-Desktop/src/main/handlers/: registration.ts
RescueBox-Desktop/src/main/models/: ml-model.ts  model-server.ts
RescueBox-Desktop/src/main/services/: model-app-service.ts  register-model-service.ts
RescueBox-Desktop/src/renderer/: App.tsx
RescueBox-Desktop/src/renderer/components/custom_ui/: customButtons.tsx
RescueBox-Desktop/src/renderer/jobs/: JobViewLayout.tsx  JobViewOutputs.tsx
RescueBox-Desktop/src/renderer/lib/: hooks.ts
RescueBox-Desktop/src/renderer/models/: ModelsTable.tsx
RescueBox-Desktop/src/renderer/registration/: ModelAppConnect.tsx  RegistrationTable.tsx
RescueBox-Desktop/src/shared/: generated_models.ts
bertscore/: results.csv  scoretest.py
experiments/jagath/texts/: message_rag.py
rescuebox/: main.py  plugins.py  registry.py
rescuebox/plugins/: __init__.py
rescuebox/test/: test_main.py
src/: abstract_input_parser.py  abstract_parser.py
src/age_and_gender_detection/: README.md  pyproject.toml
src/age_and_gender_detection/age_and_gender_detection/: box_utils.py  img-app-info.md  main.py  model.py
src/age_and_gender_detection/tests/: test_main_age_gender.py
src/audio-transcription/: pyproject.toml
src/audio-transcription/audio_transcription/: app-info.md  main.py  model.py
src/audio-transcription/tests/: test_main.py
src/doc-parser/: pyproject.toml
src/doc-parser/doc_parser/: main.py
src/file-utils/: pyproject.toml
src/file-utils/file_utils/: main.py
src/file-utils/tests/: test_main.py
src/rb-api/: Dockerfile  docker-compose.yml  pyproject.toml  run
src/rb-api/rb/api/: main.py  models.py  templates.py  utils.py
src/rb-api/rb/api/routes/: __init__.py  cli.py  probes.py  ui.py
src/rb-api/rb/api/static/: copy_to_clipboard.js  panes.css  panes.js  post_and_read.js  rb_web.css
src/rb-api/rb/api/static/index/: main.css  main.js
src/rb-api/rb/api/templates/: index.html.j2
src/rb-api/rb/api/tests/: test_api.py  test_main.py
src/rb-api/scripts/: streaming_endpoint.py
src/rb-audio-transcription/: pyproject.toml
src/rb-audio-transcription/rb_audio_transcription/: app-info.md  main.py  model.py
src/rb-audio-transcription/tests/: test_main.py
src/rb-doc-parser/: pyproject.toml
src/rb-doc-parser/rb_doc_parser/: chat.py  chat_config.yml  main.py
src/rb-facematch/: pyproject.toml
src/rb-facematch/rb_facematch/: .gitignore  app-info.md  main.py
src/rb-facematch/rb_facematch/src/facematch/: FAISS.py  database_functions.py  face_representation.py  interface.py  similarity_search.py
src/rb-facematch/rb_facematch/src/facematch/config/: db_config.json  model_config.json
src/rb-facematch/rb_facematch/src/facematch/utils/: GPU.py  resource_path.py
src/rb-facematch/test/: test_face_representation.py  test_fileCreationAndDataUpload.py  test_find_face.py  test_main.py  test_similaritySearch.py
src/rb-file-utils/: pyproject.toml
src/rb-file-utils/rb_file_utils/: main.py
src/rb-file-utils/tests/: test_main.py
src/rb-lib/: pyproject.toml
src/rb-lib/rb/lib/: abstract_parser.py  common_tests.py  docs.py  ml_service.py  ollama.py  stdout.py  typer.py  utils.py
src/rb-lib/rb/lib/tests/: test_docs.py
src/text-summary/: LICENSE  README.md  pyproject.toml
src/text-summary/output/: story_1.txt  story_2.txt  story_3.txt
src/text-summary/test_input/: story_1.txt  story_2.md
src/text-summary/test_output/: story_1.txt
src/text-summary/tests/: test_main_text_summary.py  test_model.py  test_summarize.py
src/text-summary/text_summary/: cli.py  main.py  model.py  summarize.py  summary_prompt.py  text_parser.py
src/video-summarizer/: pyproject.toml
src/video-summarizer/LICENSES/: LICENSE_bertscore.txt
src/video-summarizer/bertscore/: scoretest.py
src/video-summarizer/samples/: Human_generated_carcrash_test.mp4.docx  Human_generated_fd2.docx  Human_genrated_fd5.docx  captions_20250511_162819(fd3).csv  captions_20250512_004018(fd5).csv  captions_20250512_024411(fd2).csv  captions_20250513_022833(meandjyo).csv  summary_20250511_162819(fd3).txt  summary_20250512_004018(fd5).txt  summary_20250512_024411(fd2).txt  summary_20250512_115131(uccrime_Shooting002_x264).txt  summary_20250513_065957(clip1).txt  transcription_20250511_162819(fd3).txt
src/video-summarizer/samples/samples/: Human_generated_clip1.mov.docx  Human_generated_meandjyo.MOV.docx  captions_20250509_162233(fd1).csv  captions_20250513_065957(clip1).csv  summary_20250509_162233(fd1).txt  summary_20250512_110141(carcrash_test).txt  summary_20250513_022833(meandjyo).txt  transcription_20250512_024411(fd2).txt  transcription_20250513_022833(meandjyo).txt
src/video-summarizer/tests/: test_video.py  test_video_summarizer.py
src/video-summarizer/video_summarizer/: 11pyproject.taoml  main.py
summaries_data/: captions_20250505_134431.csv  captions_20250505_143617.csv  captions_20250511_113211.csv  captions_20250511_144113.csv  captions_20250511_212253.csv  captions_20250512_110141.csv  captions_20250512_115131.csv  summary_20250505_134431.txt  summary_20250505_143617(Never_have_I_Ever).txt  summary_20250511_113211.txt  summary_20250511_144113.txt  summary_20250511_212253.txt  transcription_20250511_113211.txt  transcription_20250511_212253.txt
web/rescuebox-autoui/: package-lock.json  package.json  vite.config.js
web/rescuebox-autoui/src/: App.css  App.jsx  index.css  main.jsx
