[tool.poetry]
name = "rescuebox"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [{include = "rescuebox"}]

[tool.poetry.scripts]
rescuebox = "rescuebox.main:app"

[tool.poetry.dependencies]
requests = "^2.32.3"
python = "^3.11"
pyyaml = "^6.0.2"
typer = "^0.12.5"

rb-lib = { path = "src/rb-lib", develop = true }

rb-file-utils = { path = "src/rb-file-utils", develop = true }
rb-doc-parser = { path = "src/rb-doc-parser", develop = true }

# Don't add new packages here, add them appropriately in the list above


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
ruff = "^0.7.1"
pre-commit = "^4.0.1"

[tool.poetry.group.api.dependencies]
rb-api = { path = "src/rb-api", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
