[tool.poetry]
name = "rescuebox"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [{include = "rescuebox"}]

[tool.poetry.scripts]
rescuebox = "rescuebox.main:app"

[tool.poetry.dependencies]
requests = "^2.32.3"
python = ">=3.11,<3.13"
pyyaml = "^6.0.2"
typer = "^0.12.5"
llvmlite = "^0.44.0"
pytest = "^8.3.4"
httpx = "^0.28.1"
# add dependencies common to all plugins here
numba = "^0.61.0"
torch = "2.2.2"
numpy = "1.26.4"

rb-lib = { path = "src/rb-lib", develop = true }

rb-file-utils = { path = "src/rb-file-utils", develop = true }
rb-doc-parser = { path = "src/rb-doc-parser", develop = true }
rb-audio-transcription = { path = "src/rb-audio-transcription", develop = true }
age-and-gender-detection = { path = "src/age_and_gender_detection", develop = true }

# Don't add new packages here, add them appropriately in the list above
beautifulsoup4 = "^4.13.3"




[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
ruff = "^0.7.1"
pre-commit = "^4.0.1"

[tool.poetry.group.api.dependencies]
rb-api = { path = "src/rb-api", develop = true }

[tool.poetry.group.bundling.dependencies]
pyinstaller = "^5.13.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
