[project]
name = "age_and_gender_detection"
version = "0.1.0"
description = "Age and Gender Classification"
authors = [
    {name = "Prasanna",email = "prasanna.lakkur@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
dependencies = [
    "numpy",
    "onnxruntime",
    "opencv-python"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
