[tool.poetry]
name = "age_and_gender_detection"
version = "0.1.0"
description = "Age and Gender Classification"
authors = ["Prasanna <prasanna.lakkur@gmail.com>"]
packages = [{include = "age_and_gender_detection"}]

[tool.poetry.scripts]
age_and_gender_detection = "age_and_gender_detection.main:app"

[tool.poetry.dependencies]
numpy = "*"
onnxruntime = "*"
opencv-python = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
