[tool.poetry]
name = "file-utils"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [{include = "file_utils"}]

[tool.poetry.scripts]
file-utils = "file_utils.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
