[tool.poetry]
name = "rb-api"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
packages = [{ include = "rb", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"
makefun = "^1.15.6"
typer = "*"

rescuebox = { path = "../../", develop = true }
rb-lib = { path = "../rb-lib", develop = true }
anytree = "^2.12.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
