[tool.poetry]
name = "rb-doc-parser"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
rb-doc-parser = "rb_doc_parser.main:app"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "*"
typer = "*"
rb-lib = "*"
pyyaml = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
