[tool.poetry]
name = "rb-file-utils"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
readme = "README.md"
packages = [{include = "rb_file_utils"}]

[tool.poetry.scripts]
rb-file-utils = "rb_file_utils.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
