[tool.poetry]
name = "rb-lib"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
readme = "README.md"
packages = [{include = "rb"}]

[tool.poetry.dependencies]
python = "^3.11"
ollama = "*"
requests = "*"
typer = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
