[project]
name = "text-summary"
version = "0.1.0"
description = "A project that helps summarize text."
authors = [
    {name = "Prasanna",email = "prasanna.lakkur@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "ollama (>=0.4.7,<0.5.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "flask-ml (>=0.2.5,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
