[project]
name = "text-summary"
version = "0.1.0"
description = "A project that helps summarize text."
authors = [
    {name = "Prasanna",email = "prasanna.lakkur@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "ollama",
    "pypdf2"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
