[project]
name = "video-summarizer"
version = "0.1.0"
description = ""
authors = [
    {name = "sachint2001",email = "sachin.t2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
